# diffusion_policy_robocasa

./: README.md  data_old  eval_robocasa.py  pyproject.toml
diffusion_policy/: __init__.py
diffusion_policy/common/: __init__.py
diffusion_policy/config/: train_diffusion_transformer_hybrid_workspace_large_transformer_largebs.yaml  train_diffusion_transformer_hybrid_workspace_no_rollout.yaml  train_diffusion_transformer_hybrid_workspace_xl_bs512.yaml  train_diffusion_transformer_hybrid_workspace_xl_bs64.yaml  train_diffusion_transformer_xl_bs128_ddim.yaml  train_diffusion_transformer_xl_im128_bs256.yaml  train_diffusion_transformer_xl_im256_bs256.yaml
diffusion_policy/config/task/cotrain/: Multitask_Cotrain_AllData.yaml  Multitask_RealOnly.yaml
diffusion_policy/config/task/robocasa/: CloseStandMixer_human_lerobot_multidataset.yaml  PnPCounterToCabinet_mg_18k.yaml  all_train_datasets.yaml  arrange_vegetables_human_250.yaml  arrange_vegetables_mg10k_src100.yaml  arrange_vegetables_mg10k_src100_2cams.yaml  arrange_vegetables_mg10k_src100_finetune.yaml  (+34 more)
diffusion_policy/dataset/: __init__.py  lerobot_dataset.py  robomimic_hdf5_image_dataset.py
diffusion_policy/env/: __init__.py
diffusion_policy/env/robomimic/: robomimic_image_wrapper.py
diffusion_policy/env_runner/: __init__.py  robomimic_image_runner.py
diffusion_policy/gym_util/: __init__.py  async_vector_env.py  sync_vector_env.py
diffusion_policy/model/: __init__.py
diffusion_policy/policy/: __init__.py
diffusion_policy/real_world/: __init__.py
diffusion_policy/scripts/: __init__.py  get_eval_stats.py
diffusion_policy/shared_memory/: __init__.py
diffusion_policy/workspace/: __init__.py  train_diffusion_transformer_hybrid_workspace.py
tests/: test_replay_buffer.py
(+31 files in other folders)
