[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion_policy"
version = "0.1.0"
description = "Diffusion Policy fork for RoboCasa benchmark experiments"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.2,<2",
    "av>=12,<16",
    "click>=8,<9",
    "dill>=0.3.8,<0.4",
    "diffusers>=0.30,<1",
    "einops>=0.8,<1",
    "gym==0.26.2",
    "gymnasium>=0.29.1,<1.0.0",
    "h5py>=3.12,<4",
    "hydra-core>=1.3,<2",
    "imagecodecs>=2024.9",
    "imageio>=2.36,<3",
    "imageio-ffmpeg>=0.5,<1",
    "matplotlib>=3.9,<4",
    "numba>=0.61,<0.62",
    "numcodecs>=0.13,<0.16",
    "numpy>=2.2,<2.3",
    "numpydantic>=1.6,<2",
    "opencv-python>=4.10,<5",
    "pandas>=2.2,<3",
    "pydantic>=2.10,<3",
    "pyarrow>=18,<22",
    "pygame>=2.6,<3",
    "pymunk>=6.8,<7",
    "robomimic",
    "scikit-image>=0.24,<1",
    "scipy>=1.15,<2",
    "shapely>=2.0,<3",
    "termcolor>=2.5,<3",
    "threadpoolctl>=3.5,<4",
    "tqdm>=4.67,<5",
    "wandb>=0.19,<1",
    "zarr>=2.18,<3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
multirun = [
    "pyyaml>=6,<7",
    "ray[default,tune]>=2.40,<3",
]
real = [
    "atomics>=1.0,<2",
    "pyrealsense2",
    "rtde-control",
    "rtde-receive",
    "spnav",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["diffusion_policy*"]
namespaces = true

[tool.setuptools.package-data]
"diffusion_policy" = [
    "config/**/*.yaml",
    "env/**/*.xml",
    "real_world/realsense_config/*.json",
]

[tool.ruff]
line-length = 88
target-version = "py311"
